--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </li>               
            
                 <li class="nav__item gridResponsive__caja--item">
-                    <a class="nav__link" href="pages/articulos.html">Biografía</a>
+                    <a class="nav__link" href="pages/biografia.html">Biografía</a>
                 </li>
 
        
