--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biografía</title>
     <link rel="icon" href="/img/logo.png">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body class="container__libros">
