--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,7 +21,7 @@
     
             <ul class="nav__links">
                     <li class="nav__item gridResponsive__caja--item">
-                        <a class="nav__link nav__link--active" href="../Index.html">Inicio</a>
+                        <a class="nav__link nav__link--active" href="../index.html">Inicio</a>
                     </li>               
                
                     <li class="nav__item gridResponsive__caja--item">
